added favorite page to view pokemon

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ img {
   /* Make the container full height of the viewport */
 }
 
-/* pokemon cards */
+/* pokemon cards for favorite page */
 .pokemon-card {
   border: 1px solid #ccc;
   border-radius: 10px;
