--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,15 @@ img {
   color: white;
 }
 
+.remove-button {
+  background-color: skyblue;
+  border-radius: 10px;
+  border: none;
+  width: 150px;
+  height: 30px;
+  cursor: pointer;
+}
+
 /* pokemon cards for favorite page */
 .pokemon-card {
   border: 1px solid #ccc;
